[purchase_requisition_extended] Set product_id required in purchase requisition line

--- a/purchase_requisition_extended/views/purchase_requisition_view.xml
+++ b/purchase_requisition_extended/views/purchase_requisition_view.xml
@@ -30,7 +30,7 @@
                     </button>
                     <tree string="Products" position="replace">
                         <tree string="Products" colors="green: color=='green'; orange: color=='orange'; red: color=='red';" editable="bottom">
-                            <field name="product_id" on_change="onchange_product_id(product_id,product_uom_id)"/>
+                            <field name="product_id" on_change="onchange_product_id(product_id,product_uom_id)" required="True" />
                             <field name="product_qty"/>
                             <field name="prefered_supplier" />
                             <field name="multy_supplier" />
