--- a/mrp_bom_standard_price/views/mrp_routing_view.xml
+++ b/mrp_bom_standard_price/views/mrp_routing_view.xml
@@ -5,10 +5,11 @@
         <record model="ir.ui.view" id="view_mrp_routing_tree_xml">
             <field name="name">mrp.routing.workcenter.tree</field>
             <field name="model">mrp.routing.workcenter</field>
+            <field name="type">tree</field>
             <field name="inherit_id" ref="mrp.mrp_routing_workcenter_tree_view"/>
             <field name="arch" type="xml">
                     <field name="hour_nbr" position="replace">
-                        <field name="hour_nbr" widget="float_time" sum="Total Time"/>
+                        <field name="hour_nbr" widget="float_time_second" sum="Total Time"/>
                         <field name="costs_hour"/>
                         <field name="total_cost" sum="Total Cost"/>
                     </field>
@@ -20,7 +21,8 @@
             <field name="model">mrp.routing.workcenter</field>
             <field name="inherit_id" ref="mrp.mrp_routing_workcenter_form_view"/>
             <field name="arch" type="xml">
-                <field name="hour_nbr" position="after">
+                <field name="hour_nbr" position="replace">
+                    <field name="hour_nbr" widget="float_time_second" sum="Total Time"/>
                     <field name="total_cost"/>
                 </field>
             </field>
