--- a/account_due_list/views/partner_view.xml
+++ b/account_due_list/views/partner_view.xml
@@ -36,7 +36,7 @@
                                        invisible="context.get('reconciled',False)"/>
                                 <field name="day" invisible="1"/>
                                 <field name="company_id" invisible="1"/>
-                                <field name="running_balance" />
+                                <!--<field name="running_balance" />-->
                             </tree>
 
                         </field>
