--- a/account_due_list/views/partner_view.xml
+++ b/account_due_list/views/partner_view.xml
@@ -10,7 +10,7 @@
                     <page string="Schedule" groups="account_due_list.can_view_due_list">
                         <separator string="Schedule" colspan="4"/>
                         <field name="payment_ids" nolabel="1" readonly="1" context="{'order': 'date asc, ref desc, move_id desc, id desc', 'color': 'reconcile_function_id'}">
-                            <tree colors="row_color">
+                            <tree colors="aqua:row_color=='aqua';black:row_color=='black';blue:row_color=='blue';brown:row_color=='brown';cadetblue:row_color=='cadetblue';darkblue:row_color=='darkblue';fuchsia:row_color=='fuchsia';forestgreen:row_color=='forestgreen';orange:row_color=='orange';green:row_color=='green';grey:row_color=='grey';red:row_color=='red';">
                                 <field name="row_color" invisible="1"/>
                                 <field name="move_id" required="False" readonly="1"/>
                                 <button name="action_view_account_move" string="Open Journal Entries" type="object"
