--- a/account_due_list/views/move_view.xml
+++ b/account_due_list/views/move_view.xml
@@ -14,5 +14,18 @@
             </field>
         </record>
 
+        <record id="view_move_line_tree1" model="ir.ui.view">
+            <field name="name">account.move.line.tree</field>
+            <field name="model">account.move.line</field>
+            <field name="type">tree</field>
+            <field eval="1" name="priority"/>
+            <field name="inherit_id" ref="account.view_move_line_tree"/>
+            <field name="arch" type="xml">
+                <field name="state" position="after">
+                    <field name="running_balance" />
+                </field>
+            </field>
+        </record>
+
     </data>
 </openerp>
