--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -296,6 +296,7 @@
                     <field name="week_nbr"/>
                     <newline/>
                     <group expand="0" string="Group By...">
+                        <filter string="Partner" icon="terp-personal" domain="[]" context="{'group_by':'partner_id'}"/>
                         <separator orientation="vertical"/>
                         <filter string="Product" icon="terp-stock_effects-object-colorize" domain="[]" context="{'group_by':'product_id'}"/>
                         <separator orientation="vertical"/>
