--- a/account_banking_sepa_direct_debit/views/account_view.xml
+++ b/account_banking_sepa_direct_debit/views/account_view.xml
@@ -30,7 +30,7 @@
             <field name="view_id" ref="l10n_it_ricevute_bancarie.view_riba_da_emettere_tree"/>
             <field name="context">{'search_default_da_emettere':1, 'nodelete': '1', 'nocreate': '1', 'noduplicate': '1'}
             </field>
-            <field name="domain">['&amp;','|',('sdd','=','True'),('unsolved_invoice_ids','!=',False),('account_id.type','=','receivable'), ('reconcile_id', '=', False)]</field>
+            <field name="domain">[('sdd','=','True'),('account_id.type','=','receivable'), ('reconcile_id', '=', False)]</field>
             <field name="search_view_id" ref="l10n_it_ricevute_bancarie.riba_filter"/>
         </record>
 
