--- a/sale_bom/views/inherit_sale_order.xml
+++ b/sale_bom/views/inherit_sale_order.xml
@@ -23,8 +23,8 @@
                 
                 <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form/notebook" position="inside">
                     <page string="Bom" attrs="{'invisible': [('with_bom', '=', False)]}">
-                        <field name="cost_price_unit_rounting" on_change="onchange_mrp_bom(product_id, mrp_bom, cost_price_unit_rounting, context)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}"/>
-                        <field colspan="4" name="mrp_bom" nolabel="1" on_change="onchange_mrp_bom(product_id, mrp_bom, cost_price_unit_rounting, context)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}" default_get="{'default_sale_order_line': active_id or False}">
+                        <field name="cost_price_unit_routing" on_change="onchange_mrp_bom(product_id, mrp_bom, cost_price_unit_routing, context)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}"/>
+                        <field colspan="4" name="mrp_bom" nolabel="1" on_change="onchange_mrp_bom(product_id, mrp_bom, cost_price_unit_routing, context)" context="{'default_sale_order_line': active_id, 'partner_id': parent.partner_id, 'pricelist_id': context.get('pricelist_id'), 'date_order': context.get('date_order'), 'fiscal_position': context.get('fiscal_position')}" default_get="{'default_sale_order_line': active_id or False}">
                             <tree string="Bom Line" editable="bottom" >
                                 <field name="order_id" invisible="1" />
                                 <field name="parent_id" readonly="1" />
