--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1461,6 +1461,7 @@ label.error {
 }
 
 .openerp .oe_form_pager {
+    padding: inherit
 }
 
 
@@ -2057,7 +2058,7 @@ label.error {
 .openerp .view-manager-main-sidebar h2 {
     margin:0;
     font-size: 100%;
-    color: #00a3da;
+  /*  color: #00a3da; */
     padding-left: 10px;
     padding-right: 21px;
     padding-top: 3px;
@@ -2065,8 +2066,8 @@ label.error {
     border-top: 1px solid #d6d7da;
   /*   background: #f7f7f7;
     border: 1px solid #CECECE;
-    border-radius: 12px; */
-    font-weight: bold;
+    border-radius: 12px;
+    font-weight: bold;*/
 }
 
 .openerp .view-manager-main-sidebar ul {
