--- a/mrp_bom_standard_price/views/mrp_bom_view.xml
+++ b/mrp_bom_standard_price/views/mrp_bom_view.xml
@@ -12,6 +12,7 @@
                     <field name="cost_price" groups="product_bom.group_cost_price" />
                 </xpath>
                 <xpath expr="//field[@name='bom_lines']//tree//field[@name='product_id']" position="replace">
+                    <field name="sequence" invisible="1"/>
                     <field name="product_id" on_change="onchange_product_id2(product_id, name, product_qty, product_uom)" select="1"/>
                     <field name="list_price" groups="product_bom.group_sell_price"/>
                     <field name="cost_price" groups="product_bom.group_cost_price" />
