--- a/l10n_it_ricevute_bancarie/wizard/riba_file_export.xml
+++ b/l10n_it_ricevute_bancarie/wizard/riba_file_export.xml
@@ -15,7 +15,8 @@
                             <button icon="gtk-ok" name="act_getfile" string="Export" type="object"/>
                         </group>
                         <group colspan="4" states="get">
-                            <field name="riba_.txt" readonly="1"/>
+                            <field name="riba_export_file" readonly="1" filename="riba_export_name"/>
+                            <field name="riba_export_name" invisible="1" />
                         </group>
                     </group>
                 </form>
