Continue to work on SDD

--- a/account_banking_mandate/views/account_banking_mandate_view.xml
+++ b/account_banking_mandate/views/account_banking_mandate_view.xml
@@ -26,6 +26,7 @@
                             <field name="signature_date"/>
 
                             <field name="last_debit_date"/>
+                            <field name="recurrent" />
                         </group>
                         <!--<group name="payment_lines" string="Related Payment Lines">-->
                         <!--<field name="payment_line_ids" nolabel="1"/>-->
