--- a/account_banking_sepa_direct_debit/views/riba_configurazione.xml
+++ b/account_banking_sepa_direct_debit/views/riba_configurazione.xml
@@ -14,6 +14,7 @@
                 <field name="name" position="after">
                     <field name="sdd"/>
                     <field name="PrvtId" attrs="{'required': [('sdd', '=', True)], 'invisible': [('sdd', '=', False)]}"/>
+                    <field name="sdd_type" attrs="{'required': [('sdd', '=', True)], 'invisible': [('sdd', '=', False)]}"/>
                 </field>
             </field>
         </record>
