--- a/account_due_list/views/move_view.xml
+++ b/account_due_list/views/move_view.xml
@@ -15,15 +15,44 @@
         </record>
 
         <record id="view_move_line_tree1" model="ir.ui.view">
-            <field name="name">account.move.line.tree</field>
+            <field name="name">account.move.line.tree.inherit</field>
             <field name="model">account.move.line</field>
             <field name="type">tree</field>
             <field eval="1" name="priority"/>
             <field name="inherit_id" ref="account.view_move_line_tree"/>
             <field name="arch" type="xml">
+                <field name="partner_id" position="attributes">
+                    <attribute name="invisible">context.get('filter_partner_id', False)</attribute>
+                </field>
                 <field name="state" position="after">
                     <field name="running_balance" />
                 </field>
+                <field name="debit" position="attributes">
+                    <attribute name="invisible">not context.get('payment_filter', False)</attribute>
+                </field>
+                <field name="credit" position="attributes">
+                    <attribute name="invisible">not context.get('payment_filter', False)</attribute>
+                </field>
+            </field>
+        </record>
+
+        <record id="view_account_move_line_filter_inherit" model="ir.ui.view">
+            <field name="name">account.move.line.filter.inherit</field>
+            <field name="model">account.move.line</field>
+            <field name="inherit_id" ref="account.view_account_move_line_filter"/>
+             <field name="type">search</field>
+            <field name="arch" type="xml">
+                <filter name="posted" position="after">
+                    <separator/>
+                    <filter icon="terp-sale" string="Receivable" domain="[('account_id.type','=','receivable')]"
+                                help="Receivable payments" invisible="not context.get('payment_filter', False)"/>
+                    <filter icon="terp-purchase" string="Payable" domain="[('account_id.type','=','payable')]"
+                                help="Payable payments" invisible="not context.get('payment_filter', False)"/>
+                </filter>
+                <field name="partner_id" position="attributes">
+                    <attribute name="context">{'filter_partner_id': True}</attribute>
+                </field>
+
             </field>
         </record>
 
