--- a/account_due_list/views/payment_view.xml
+++ b/account_due_list/views/payment_view.xml
@@ -16,7 +16,7 @@
                     <button name="action_view_invoice" string="Open Invoice" type="object" icon="gtk-zoom-in"/>
                     <field name="invoice_date" readonly="1"/>
                     <!--<field name="invoice_origin" readonly="1"/>-->
-                    <field name="partner_id" string="Partner" readonly="1"/>
+                    <field name="partner_id" string="Partner" readonly="1" invisible="context.get('filter_partner_id', False)"/>
                     <!--<field name="partner_ref" readonly="1"/>-->
                     <field name="payment_term_id" readonly="1"/>
                     <field name="payment_term_type" readonly="1"/>
@@ -93,7 +93,7 @@
 
                     <field name="stored_invoice_id"/>
                     <field name="invoice_origin"/>
-                    <field name="partner_id"/>
+                    <field name="partner_id" context="{'filter_partner_id': True}"/>
                     <newline/>
                     <field name="payment_term_type"/>
                     <field name="bank_id" domain="[('state', '=', 'iban')]" context="{'only_iban': True}"/>
